# CodeGuide-Agent

./: .gitignore  AGENTS.md  Makefile  NOTICE.md  README.md  README.zh-CN.md  pyproject.toml  requirements-training.txt
codeguide_agent/: __init__.py  eval_compare.py  eval_mini_repo.py
configs/: phase1.yaml
docs/: CANONICAL_TRAINING_DATA_PIPELINE.md  CLAUDE_REVIEW_HANDOFF.md  CodeGuide-Agent-design-v0.9.md  CodeGuide-Agent-设计文档-v0.8-VerifierDrivenRepairAgenticRL版.md  DATASET_QUALITY_REPORT.json  DATASET_QUALITY_REPORT.md  DATASET_SCALE_REPORT.json  DESIGN_COMPLETION_REPORT.md  HISTORY_RAG_AGENT_LOOP_ABLATION_623.md  HISTORY_RAG_READINESS_623.md  INDEX.md  INTERVIEW_PROJECT_BRIEF.md  P11_REPRODUCIBLE_RUNBOOK.md  P13_CI_RELEASE_CHECK.md  P15_MODEL_FACING_AUDIT.md  P16_P17_SCALING_PLAN.md  P18_TASK_SKELETON_GENERATOR.md  P19_TASK_PROMOTION_GATE.md  P20_P22_EXPANSION_EXECUTION_PACK.md  P23_P30_TRAINING_EXECUTION_PACK.md  P31_DATA_EXPANSION_PLAN.md  P31_DATA_EXPANSION_SPRINT.md  P34_ROLLOUT_EXPORT_021_025.md  P38_ROLLOUT_EXPORT_026_030.md  P42_ROLLOUT_EXPORT_031_040.md  P50_ROLLOUT_EXPORT_041_050_AND_SFT_GOLD.md  P55_ROLLOUT_EXPORT_051_060.md  P61_ROLLOUT_EXPORT_061_100.md  P7_TRAINING_SCAFFOLD.md  P8_EXPERIMENT_LOOP.md  PHASE1_5_REPORT.md  PHASE1_HANDOFF.md  PHASE2_ROLLOUT_PLAN.md  PROJECT_STORY.md  RESUME_BULLETS.md  ROLLOUT_BATCH_PLAN.json  SMOKE_SFT_623.md  TASK_EXPANSION_SPEC.md  TASK_PROMOTION_READINESS_REPORT.json  TODO_CLAUDE_REVIEW_FIXES.md  (+8 more)
scripts/: audit_model_facing_artifacts.sh  build_code_rag_index.py  build_history_rag_index.py  build_rollout_batch_plan.py  (+47 more)
(+876 files in other folders)
