[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguide-agent"
version = "0.1.0"
description = "Verifier-driven code repair agentic RL infrastructure"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["codeguide_agent*"]
